manifests/dev/securo/Deployment-securo-beat.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: securo-beat
    app.kubernetes.io/name: securo-beat
  name: securo-beat
  namespace: securo
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: securo-beat
      app.kubernetes.io/name: securo-beat
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: securo-beat
        app.kubernetes.io/name: securo-beat
    spec:
      automountServiceAccountToken: true
      containers:
        - command:
            - celery
            - -A
            - app.worker
            - beat
            - --loglevel=info
          image: ghcr.io/securo-finance/securo-backend:0.15.1
          imagePullPolicy: IfNotPresent
          name: securo-beat
          ports: []
          volumeMounts:
            - mountPath: /app/data/attachments
              name: attachments
            - mountPath: /app/data/agent_knowledge
              name: agent-knowledge
            - mountPath: /app/data/embedding_models
              name: embedding-models
      serviceAccountName: default
      volumes:
        - name: attachments
          persistentVolumeClaim:
            claimName: securo-securo-attachments
        - name: agent-knowledge
          persistentVolumeClaim:
            claimName: securo-securo-agent-knowledge
        - name: embedding-models
          persistentVolumeClaim:
            claimName: securo-securo-embedding-models
