manifests/dev/securo/Service-securo-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: securo-backend
  namespace: securo
spec:
  ports:
    - name: http
      port: 8000
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/instance: securo-backend
    app.kubernetes.io/name: securo-backend
  type: ClusterIP
