manifests/dev/securo/Service-securo-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: securo-frontend
  namespace: securo
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/instance: securo-frontend
    app.kubernetes.io/name: securo-frontend
  type: ClusterIP
