manifests/dev/securo/Ingress-securo.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: securo
  namespace: securo
spec:
  ingressClassName: traefik
  rules:
    - host: securo.home.kronkltd.net
      http:
        paths:
          - backend:
              service:
                name: securo-frontend
                port:
                  name: http
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - securo.home.kronkltd.net
      secretName: securo-tls
